RESOLVED FIXED188319
[LFC][BFC] contentHeightForFormattingContextRoot uses the wrong coordinate system to compute the height.
https://bugs.webkit.org/show_bug.cgi?id=188319
Summary [LFC][BFC] contentHeightForFormattingContextRoot uses the wrong coordinate sy...
alan
Reported 2018-08-03 13:04:42 PDT
Display::Box::marginBox vs Display::Box::rectWithMargin
Attachments
Patch (2.83 KB, patch)
2018-08-03 13:08 PDT, alan
koivisto: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews206 for win-future (12.92 MB, application/zip)
2018-08-03 18:48 PDT, EWS Watchlist
no flags
alan
Comment 1 2018-08-03 13:08:17 PDT
EWS Watchlist
Comment 2 2018-08-03 18:48:22 PDT
Comment on attachment 346542 [details] Patch Attachment 346542 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/8756996 New failing tests: legacy-animation-engine/imported/blink/transitions/unprefixed-transform.html
EWS Watchlist
Comment 3 2018-08-03 18:48:33 PDT
Created attachment 346575 [details] Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
alan
Comment 4 2018-08-05 16:20:03 PDT
Radar WebKit Bug Importer
Comment 5 2018-08-05 16:22:12 PDT
Note You need to log in before you can comment on or make changes to this bug.