[LFC][BFC] contentHeightForFormattingContextRoot uses the wrong coordinate system to compute the height. https://bugs.webkit.org/show_bug.cgi?id=188319

Reviewed by Antti Koivisto.

Display::Box::marginBox() is in the coordinate system of the box itself (8px top margin translates to y = -8px).
What we need instead to compute the content height is the top/bottom position in the containing block's coordinate system (rect and rectWithMargin).

* layout/FormattingContextGeometry.cpp:
(WebCore::Layout::contentHeightForFormattingContextRoot):

Canonical link: https://commits.webkit.org/203433@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234584 268f45cc-cd09-0410-ab3c-d52691b4dbfc